--- a/scratch.html
+++ b/scratch.html
@@ -7,9 +7,17 @@
 </head>
 <body>
 
-<div id="ampoule" class="cadre1" ">
+<div id="ampoule" class="cadre1">
     <p>ampoule</p>
 </div>
+<p>
+<a href="www.moncv.tn">Allez vers mon cv</a><br>
+<a href="google.cm">Allez vers google cm</a><br>
+<a href="google.tn">Allez vers google tn</a><br>
+<a href="google.fr">Allez vers google fr</a><br>
+<a href="google.com">Allez vers google com</a><br>
+</p>
+<script src="exolien.js"></script>
 <script src="testvariable.js"></script>
 </body>
 </html>
