--- a/scratch.html
+++ b/scratch.html
@@ -11,10 +11,8 @@
     <p>ampoule</p>
 </div>
 <p>
-<a href="www.moncv.tn">Allez vers mon cv</a><br>
+<a href="www.moncv.tn">Allez vers mon cv &quot</a><br>
 <a href="google.cm">Allez vers google cm</a><br>
-<a href="google.tn">Allez vers google tn</a><br>
-<a href="google.fr">Allez vers google fr</a><br>
 <a href="google.com">Allez vers google com</a><br>
 </p>
 <script src="exolien.js"></script>
